[gd_scene load_steps=2 format=3 uid="uid://d1lracskqqqx1"]

[ext_resource type="Script" path="res://game_over_screen.gd" id="1_si78r"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_si78r")

[node name="StatsContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DepthLabel" type="Label" parent="StatsContainer"]
layout_mode = 2

[node name="KillsLabel" type="Label" parent="StatsContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="StatsContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RestartButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Play Again"

[node name="QuitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Quit"
